[package]
name = "fplab-server"
version = "0.1.0"
authors = ["Marcelo Almeida <mgba@umich.edu>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
# actix-related
actix = "0.9"
actix-rt = "1.1"
actix-web = "2.0"
actix-files = "0.2"
actix-identity = "0.2"
actix-session = "0.3.0"
# serialization
serde = { version = "1.0", features = ["derive"] }
# logging
env_logger = "0.7"
chrono = "0.4"
# db and encryption
rusqlite = { version = "0.24.1", features = ["bundled"] }
sha2 = "0.9.1"
uuid = { version = "0.8.1", features = ["v4"] }
# server-side dynamic pages
handlebars = { version = "3.5.1", features = ["dir_source"] }
# autograde assignments
execute = "0.2.8"
fs = "0.0.5"